fix: checkbox shrinks on smaller screens

--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -20,6 +20,7 @@
 
 .checkmark {
 	display: flex;
+	flex-shrink: 0;
 	width: 18px;
 	height: 18px;
 	border-radius: 4px;
